# wvmcc

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  pp.c
.circleci/: config.yml
.github/workflows/: cmake-multi-platform.yml
cmake/: FindSkyPat.cmake  FindWasmVM.cmake
misc/: Dockerfile  btree.dot  mapTest  mapTest.c  out.dot  ppParseState.dot  rule.txt
pp/: CMakeLists.txt  lex.c  lex.cpp  lex.h  lex.hpp  pp.c  token.c  token.h  token.hpp
src/: CMakeLists.txt  ErrorMsg.h  errorMsg.h  fileInst.c  fileInst.h  list.c  list.h  map.c  map.h  pp.c  ppDirective.c  ppDirective.h  stack.c  stack.h  wvmcc.c
src/codegen/: genFuncs.c  genFuncs.h
src/exec/: .gitignore  CCOption.c  CCOption.h  CMakeLists.txt  CommandParser.cpp  CommandParser.hpp  color.hpp  hello.c  wasmvm-cc.cpp  wvmcc.c  wvmcc.cpp
src/include/: Archive.hpp  Buffer.h  ByteBuffer.h  CommandParser.hpp  Compiler.hpp  Error.hpp  FIleReader.h  FileReader.h  Lexer.h  Lexer.hpp  Linker.hpp  Option.h  Parser.hpp  Pass.h  PassManager.h  PreProcessor.hpp  SourceFile.hpp  SourceStream.hpp  Token.h  Token.hpp  TokenBuffer.h  Util.h  color.hpp  common.hpp
src/include/AST/: Decl.hpp  Dump.hpp  Expr.hpp  TransUnit.hpp
src/include/adt/: Buffer.h  Context.h  Map.h  Pass.h  Stack.h  Token.h  Vector.h
src/include/lexer/: Lexer.h
src/lib/: Archive.cpp  ByteBuffer.c  CMakeLists.txt  CommandParser.cpp  Compiler.cpp  FIleReader.c  FileReader.c  Lexer.cpp  Linker.cpp  Option.c  Parser.cpp  PassManager.c  PreProcessor.cpp  SourceFile.cpp  SourceStream.cpp  Token.c  Token.cpp  TokenBuffer.c  Util.c  exception.cpp
src/lib/AST/: Dump.cpp  Expr.cpp
src/lib/PreProcessor/: CMakeLists.txt  ErrorListener.cpp  ErrorListener.hpp  Expression.cpp  Macro.cpp  PP.g4  PPToken.g4  PreProcessor.cpp  Scanner.cpp  Visitor.cpp  Visitor.hpp  test.c  test.cpp  test.txt
src/lib/adt/: List.c  Map.c  Stack.c  Token.c  Vector.c  list.c  map.c
src/lib/lexer/: Lexer.c  character.c  floating.c  identifier.c  integer.c  keyword.c  punctuator.c  string.c
src/parse/: declarations.c  expressions.c  externDefs.c  lex.c  lex.h  node.h  rules.h  statements.c  structs.c  structs.h  token.h  util.c  util.h
src/tools/: CMakeLists.txt
src/tools/parserGen/: CMakeLists.txt  FirstFollow.cpp  FirstFollow.hpp  FirstFollowExtractor.cpp  FirstFollowExtractor.hpp  Merger.hpp  Rule.cpp  Rule.hpp  RuleParser.cpp  RuleParser.hpp  main.cpp
test/: CMakeLists.txt
test/PreProcessor/: PreProcessor.cpp  character.txt  identifier.txt  punctuator.txt
test/SourceFile/: SourceFile.cpp  concat.txt  newline.txt  trigraph.txt
test/SourceStream/: SourceStream.cpp
test/harness/: harness.cpp  harness.hpp  main.cpp
test/pp/: pp.cpp
test/pp_directive/: defined.c  elif.c  else.c  error.c  if.c  line.c  out.h  pp_directive.cpp  undef.c
test/pp_directive/include/: in.h  include.c
test/pp_macro/: function_like.c  hash_operator.c  obj_like.c  pp_macro.cpp
test/pp_token/: character.txt  comment.txt  header_name.txt  identifier.txt  pp_number_float.txt  pp_number_int.txt  pp_token.cpp  punctuator.txt  string_literal.txt  whitespace.txt
test/unittests/: ByteBuffer_unittest.hpp  CMakeLists.txt  FileReader_unittest.hpp  Lexer_unittest.hpp  Option_unittest.hpp  PassManager_unittest.hpp  TokenBuffer_unittest.hpp  Token_unittest.hpp  unittest.cpp.in
test/unittests/adt/: Token_unittest.hpp
test/unittests/exec/: CCOption_unittest.hpp  CMakeLists.txt
test/unittests/lib/: ByteBuffer_unittest.hpp  CMakeLists.txt  FileReader_unittest.hpp
test/unittests/lib/adt/: Vector_unittest.hpp
test/unittests/tools/: CMakeLists.txt  FirstFollowExtractor_unittest.hpp  FirstFollow_unittest.hpp  RuleParser_unittest.hpp  Rule_unittest.hpp
